--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -26,7 +26,10 @@ header a{
 header a:hover{
 	color:black;
 }
-.container{
+.error{
+	color:red;
+}
+/*.container{
 	width:600px;
 	
 	margin:0px;
@@ -42,11 +45,16 @@ header a:hover{
 	margin-bottom: 5px;
 	padding-left:10px;
 }
+.container h3{
+	margin-left:10px;
+}
+.container input{
+	padding:5px;
+}
 .login_wrapper{
 	width:inherit;
 	padding:10px;
 	margin:0px;
-	background:orange;
 }
 .slide{
 	width:300px;
@@ -67,18 +75,18 @@ header a:hover{
 	margin:0px;
 	padding:0px 5px 10px 10px;
 }
-.login ul{
+.login ul, .container ul{
 	width:inherit;
 	margin:0px;
 	padding:0px;
 	list-style-type: none;
 }
-.login ul li{
+.login ul li, .container ul li{
 	margin-bottom:3px;
 	padding: 5px 5px 10px 10px;
 	width:250px;
 }
-.login ul li label{
+.login ul li label, .container ul li label{
 	display:block;
 	widht:250px;
 	padding-left:2px;
@@ -111,7 +119,8 @@ header a:hover{
 }
 #btnLogin:hover{
 	background-color:#3C9DD0;
-}
+}*/
+
 footer{
 	width:600px;
 	margin-right:auto;
@@ -143,4 +152,7 @@ footer ul li a{
 }
 footer ul li a:hover{
 	color:black;
+}
+.box-shadow{
+	box-shadow:0px 0px 4px 2px gray;
 }
